--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-angular-auth",
+  "name": "serverless-angular-user-data",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
